--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "typescript": "^5.5.2",
     "vitest": "2.1.8",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "hono": "^4.6.13"
   }
 }
